Change 'Sessions This Week' to 'Sessions This Month' (monthly lookback)

--- a/web/templates/main_view.html
+++ b/web/templates/main_view.html
@@ -18,9 +18,9 @@
         <div class="stat-number">{{ active_count }}</div>
         <div class="stat-label">Active Clients</div>
     </div>
-    <div class="stat-card purple" draggable="true" data-card-id="sessions-week">
-        <div class="stat-number">{{ sessions_this_week }}</div>
-        <div class="stat-label">Sessions This Week</div>
+    <div class="stat-card purple" draggable="true" data-card-id="sessions-month">
+        <div class="stat-number">{{ sessions_this_month }}</div>
+        <div class="stat-label">Sessions This Month</div>
     </div>
     <div class="stat-card coral" draggable="true" data-card-id="pending-invoices">
         <div class="stat-number">{{ pending_invoices }}</div>
