--- a/web/static/css/shared.css
+++ b/web/static/css/shared.css
@@ -1504,6 +1504,7 @@ h2 svg[data-lucide].page-icon {
     cursor: pointer;
     transition: all 0.2s;
     height: 38px;
+    min-width: 140px;
     box-sizing: border-box;
 }
 
