--- a/web/static/css/shared.css
+++ b/web/static/css/shared.css
@@ -1557,6 +1557,7 @@ h2 svg[data-lucide].page-icon {
     align-items: center;
     line-height: 1;
     height: 38px;
+    min-width: 140px;
     box-sizing: border-box;
 }
 
