Add color descriptors to background selector options

--- a/web/templates/settings.html
+++ b/web/templates/settings.html
@@ -185,10 +185,10 @@ details[open] .settings-section-header .arrow {
             <div class="form-group mb-0">
                 <label for="background-style">Background</label>
                 <select id="background-style" onchange="saveAndApplyBackground()">
-                    <option value="suit-grey">Suit Grey</option>
-                    <option value="sage-mist">Sage Mist</option>
-                    <option value="soft-cream">Soft Cream</option>
-                    <option value="warm-stone">Warm Stone</option>
+                    <option value="suit-grey">Suit Grey (Cool grey)</option>
+                    <option value="sage-mist">Sage Mist (Soft green)</option>
+                    <option value="soft-cream">Soft Cream (Warm cream)</option>
+                    <option value="warm-stone">Warm Stone (Taupe)</option>
                     <!-- Background images will be added by JavaScript -->
                 </select>
             </div>
